# Flappy-Bird-Agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
agents/: __init__.py  base_agent.py  ppo_agent.py
configs/: __init__.py  model_config.py  training_config.py
environments/: __init__.py  flappy_bird_env.py  wrappers.py
evaluation/: __init__.py
scripts/: __init__.py  evaluate.py  train.py
tests/: __init__.py  test_environment.py
training/: __init__.py  callback.py  trainer.py
utils/: __init__.py
